[package]
name = "maine"
version = "0.1.0"
authors = ["eric"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
bytes = "*"
byteorder = "*"
futures = "*"
env_logger = "*"
serde = "*"
serde_json = "*"
failure_derive="*"
lazy_static = "*"
bson = "*"
chrono = { version = "*", features = ["serde"]}
tonic = "*"
prost = "*"
prost-types = "*"
tokio = { version = "*", features = ["full"] }
envconfig = "*"
envconfig_derive = "*"
dotenv = "*"
jsonwebtoken = "*"
typed-builder = "*"
log = "*"
fern = "*"
sqlx = { version = "*", features = [ "mysql", "macros", "chrono", "runtime-tokio-native-tls", "migrate", "json" ] }
anyhow = "*"
thiserror = "*"
async_once = "*"
nats = "*"
etcd-rs = "0.5"
tower = "*"
dashmap = "4.0.2"
redis = { version = "*", features = ["tokio-comp"] }

[build-dependencies]
tonic-build = "*"