[package]
name = "teddy"
version = "0.1.0"
authors = ["Eric Wei <786655727@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10"
actix-web = "3"
actix-web-actors = "3"
actix-files = "0.3"
log = "0.4"
rand = "0.7"
bytes = "0.5"
byteorder = "1.3"
futures = "0.3"
env_logger = "0.8"
serde = "1"
serde_json = "1"
tonic = "*"
nats = "*"
prost = "*"
prost-types = "*"
futures-util = { version = "0.3", default-features = false, features = ["async-await", "sink", "std"] }
pin-project = "1.0"
tokio = { version = "1.0.0", default-features = false, features = ["io-std", "macros", "net", "rt-multi-thread", "time"] }
crossbeam = "0.8"
farmhash = "*"
envconfig = "*"
envconfig_derive = "*"
uuid = { version = "0.8", features = ["serde", "v4"] }
dotenv = "*"
etcd-rs = "0.5"
lazy_static = "*"

[build-dependencies]
tonic-build = {version = "*", features = ["prost"] }